# gl4py

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  rules.mk  typos.toml
_extras/: gleam-for-python.md  links.md
api/: Makefile  gleam.toml  index.md  manifest.toml
api/snippets/: db.gleam  router.gleam
api/src/: todo_server.gleam
api/test/: api_test.gleam
backend/: Makefile  gleam.toml  manifest.toml
backend/src/: todo_db.gleam
backend/test/: backend_test.gleam
basics/: gleam.toml  index.md
basics/src/: arithmetic.gleam  hello.gleam  icecream.gleam  tuples.gleam  types.gleam
binary/: gleam.toml  index.md
binary/src/: pack_demo.gleam  unpack_demo.gleam
chat/: Makefile  gleam.toml  manifest.toml
client/: Makefile  gleam.toml  index.md  manifest.toml
dataframe/: Makefile  gleam.toml  index.md
dedup/: gleam.toml  index.md  manifest.toml
docs/: index.html
errors/: gleam.toml  index.md
eventual/: Makefile  gleam.toml  index.md
functions/: gleam.toml  index.md  manifest.toml
glob/: gleam.toml  index.md  parse_demo.sh
glossary/: index.md
intro/: hello_gleam.txt  index.md
kvstore/: gleam.toml  index.md  manifest.toml
lustre/: Makefile  gleam.toml  index.md
machine/: Makefile  gleam.toml  index.md
mapreduce/: Makefile  gleam.toml  index.md
modules/: gleam.toml  index.md
prop/: Makefile  gleam.toml  index.md
stream/: Makefile  gleam.toml  index.md
use/: gleam.toml  index.md  manifest.toml
vm/: Makefile  gleam.toml  index.md
workers/: Makefile  gleam.toml  index.md  manifest.toml
(+89 files in other folders)
